# MOS

./: .clang-format  .gitignore  .gitmodules  .typos.toml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Cargo.toml  Kconfig  README.md  boot_sector.asm  config_sample.cmake  main.c  mos_config.cmake
arch/riscv64/: CMakeLists.txt  Kconfig  riscv64_platform.c  riscv64_platform_api.c
arch/riscv64/devices/: sbi_console.c
arch/x86/: CMakeLists.txt  boot.cmake  gdt.c  gdt_flush.S  idt.c  interrupt.c  kernel_entry.asm  mos_platform.cmake  platform.c  platform_config.cmake  x86.cmake  x86_descriptor_flush.asm  x86_interrupt.c  x86_platform.c  x86_platform_api.c
arch/x86/acpi/: acpi.c  madt.c
arch/x86/boot/: boot_sector.asm  utils.asm
arch/x86/cpu/: ap_entry.c  ap_init.asm  cpu.c  cpuid.c  smp.c
arch/x86/descriptors/: descriptors.c  flush32.asm  flush64.asm
arch/x86/devices/: initrd_blockdev.c  port.c  serial.c  serial_console.c  text_mode_console.c
arch/x86/drivers/: port.c  screen.c  serial.c  serial_console.c  text_mode_console.c
arch/x86/gdt/: gdt.c
arch/x86/init/: descriptor_flush.asm  gdt.c  gdt_flush.asm  gdt_tss_idt_flush.asm  idt.asm  idt.c  interrupt_handler.asm  tss.c
arch/x86/interrupt/: apic.c  idt.c  interrupt.asm  interrupt.c  interrupt64.asm  ioapic.c  lapic.c  pic.c  x86_interrupt.c
arch/x86/mm/: enable_paging.asm  mm.c  mmu.c  paging.c  paging_impl.c  pmem_freelist.c
arch/x86/multiboot/: multiboot.asm  multiboot.cmake
arch/x86/raw_boot/: boot_sector.asm  bootable.cmake  gdt.asm  kernel_entry.asm  pm_switch.asm  pm_utils.asm  raw_boot.cmake  raw_boot.ld  rm_diskio.asm  rm_utils.asm
arch/x86/tasks/: context.c  context_switch.asm  context_switch64.asm  tss.c  usermode.asm
arch/x86_64/: CMakeLists.txt  Kconfig  mos_platform.cmake  platform_config.cmake  x86_64_platform.c  x86_64_platform_api.c  x86_platform.c  x86_platform_api.c
arch/x86_64/acpi/: acpi.c  madt.c
arch/x86_64/cpu/: ap_entry.c  cpu.c  cpuid.c  smp.c
arch/x86_64/descriptors/: descriptors.c
arch/x86_64/devices/: rtc.c  serial.c  serial_console.c
arch/x86_64/interrupt/: interrupt64.asm  ioapic.c  lapic.c  x86_interrupt.c
arch/x86_64/mm/: mm.c  paging.c
arch/x86_64/tasks/: context.c  context_switch64.asm  fpu_context.c
libs/librpc/: CMakeLists.txt  rpc_client.c  rpc_client.cpp  rpc_server.c  rpc_server.cpp  spec.md
proto/: CMakeLists.txt  blockdev.proto  filesystem.proto  graphics-dm.proto  graphics-gpu.proto  graphics.proto  input-types.proto  mos_rpc.proto  mosrpc-options.proto  mosrpc.proto  net-networkd.proto  services.proto  syslog.proto  userfs-manager.proto  xmosrpc.options
tests/: CMakeLists.txt  Kconfig  run_tests.sh  test_engine.c  test_engine.h  test_engine_impl.h  tests.cmake  tinytest.h
tests/cmdline_parser/: test_cmdline_parser.c
tests/downwards_stack/: test_downwards_stack.c
tests/fs_api/: test_fs_api.c
tests/hashmap/: test_hashmap.c
tests/include/: unittest.h
tests/include/mos/: testing.h  tinytest.h
tests/kmalloc/: test_kmalloc.c
tests/linked_list/: test_linked_list.c
tests/memops/: test_memops.c
tests/printf/: CMakeLists.txt  test.c  test.cpp  test_printf.c
tests/ring_buffer/: test_ring_buffer.c
tests/vfs/: test_vfs.c
tools/uefi_bootloader/: CMakeLists.txt  boot_info.h  common.h  elf.c  elf.h  loader.c  main.c
userspace/: CMakeLists.txt  Kconfig  crt0.c  libuserspace.c
userspace/assets/: msg.txt  symlink-abs  symlink-bad  symlink-rel
userspace/assets/config/: init.conf
userspace/cmake/: userspace.cmake
userspace/drivers/: CMakeLists.txt
userspace/drivers/acpi-daemon/: CMakeLists.txt  lai_host.c  main.c  main.cpp  uacpi_host.cpp
userspace/drivers/blockdev-layer-gpt/: CMakeLists.txt  gptdisk.cpp  gptdisk.hpp  layer-gpt.cpp  layer-gpt.hpp  main.cpp  uuid.hpp
userspace/drivers/blockdev-layers/: CMakeLists.txt  layer-gpt.cpp
userspace/drivers/blockdev-manager/: CMakeLists.txt  autodestroy.hpp  blockdev_manager.cpp  blockdev_manager.hpp  blockdevfs.cpp  blockdevfs.hpp  main.cpp
userspace/drivers/device-manager/: CMakeLists.txt  dm.h  dm_common.hpp  dm_server.c  dm_server.cpp  dm_server.hpp  drivers.c  drivers.cpp  main.c  main.cpp
userspace/drivers/fs/: CMakeLists.txt  mount.c  umount.c
userspace/drivers/inputd/: CMakeLists.txt
userspace/drivers/libdma/: CMakeLists.txt  libdma.c
userspace/drivers/networkd/: CMakeLists.txt  main.cpp
userspace/drivers/pci/: CMakeLists.txt  main.c  pci_classes.h
userspace/drivers/pci-daemon/: CMakeLists.txt  builtin.h  known_devices.c  known_devices.cpp  known_devices.h  known_devices.hpp  main.c  main.cpp  pci_scan.c  pci_scan.cpp  pci_scan.h
userspace/drivers/pcie/: CMakeLists.txt  main.c
userspace/drivers/ramdisk/: CMakeLists.txt  main.cpp  ramdisk.cpp  ramdisk.toml
userspace/drivers/virtiod/: Cargo.toml  build.rs
userspace/drivers/x86-console/: CMakeLists.txt  main.c
userspace/drivers/x86_text_console/: CMakeLists.txt  console-client.c  main.c  text_mode_console.c  text_mode_console.h
userspace/games/: CMakeLists.txt
userspace/games/2048/: main.c
userspace/games/llama2.cpp/: CMakeLists.txt  run.cpp  run.h
userspace/include/: fcntl.h  libuserspace++.hpp  libuserspace.h  memory.h  mos_signal.h  signal.h
userspace/include/lib/: memory.h
userspace/include/mos/: moslib_global.h
userspace/include/sys/: stat.h
userspace/init/: CMakeLists.txt  main.c
userspace/initrd/: CMakeLists.txt  README.txt
userspace/initrd/assets/: init.msh  self-test.msh  setup.msh  symlink-dir
userspace/initrd/config/: config-schema.json  (+4 more)
userspace/labs/: CMakeLists.txt  lab2.1.c  lab3.2.c  lab3.3.c  lab4.1.c  lab4.2.c  lab4.3.c
userspace/libs/: CMakeLists.txt  cxa.c  fcntl.c  liballoc.c  libuserspace++.cpp  libuserspace.c  signal.c  stdio.c  stdlib.c  struct_file.h  sys-stat.c
userspace/locks/: main.c
userspace/ping-pong/: CMakeLists.txt  ping.c  pong.c
userspace/programs/: CMakeLists.txt  console-helpers.c  console-helpers.h
userspace/services/: CMakeLists.txt
userspace/tests/: CMakeLists.txt  console-helpers.h  fork_test.c  test-main.c
(+1372 files in other folders)
